Adding logic for playing .mp3 when click on some name in playlist.

--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -45,6 +45,7 @@
                     <DataTemplate>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
+                <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
             </ListBox>
         </Grid>
     </Grid>
