--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -7,20 +7,25 @@
         mc:Ignorable="d"
         Title="Sound Wizard" Height="700"  Width="600" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
     <Grid>
-
-        <Grid Background="CornflowerBlue" Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
-            <Grid.Resources>
-                <SolidColorBrush x:Key="brownBrush" Color="Wheat"></SolidColorBrush>
-            </Grid.Resources>
-            <Button Name="OpenButton" Height="70" Width="70" Background="Azure" BorderThickness="5" BorderBrush="Black" Click="Open_Button_Click" Margin="63,146,485,382">Open</Button>
-            <Button Width="70" Height="70"  Background="Azure" BorderBrush="Black" Margin="168,146,380,382">Rewind</Button>
-            <Button Width="70" Height="70"  Background="Azure" BorderBrush="Black" Margin="269,146,279,382">Play / Pause</Button>
-            <Button Width="70" Height="70" Background="Azure" BorderBrush="Black" Margin="377,146,171,382">Forward</Button>
-            <Button Width="70" Height="70"  Background="Azure" BorderBrush="Black" Margin="481,146,67,382">Stop</Button>
+        
+        <Grid Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
+            <Grid.Background>
+                <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill"/>
+            </Grid.Background>
+            <Button Name="OpenButton" Height="70" Width="70" Background="#FFEC73F1" BorderThickness="5" BorderBrush="Black" Click="Open_Button_Click" Margin="63,146,485,382">Open</Button>
+            <Button Name="RewindButton" Width="70" Height="70"  Background="#FFEC73F1" BorderBrush="Black" Margin="168,146,380,382" Click="Rewind_Button_Click">Rewind</Button>
+            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="Play_Button_Click">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/Button/PlayButton1.png" />
+                    <TextBlock>Play / Pause</TextBlock>
+                </StackPanel>
+            </Button>
+            <Button Name="ForwardButton" Width="70" Height="70" Background="#FFEC73F1" BorderBrush="Black" Margin="377,146,171,382" Click="Forward_Button_Click">Forward</Button>
+            <Button Name="StopButton" Width="70" Height="70"  Background="#FFEC73F1" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Button_Click">Stop</Button>
         </Grid>
         <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
-        <ListBox ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" SelectionChanged="Playlist_SelectionChanged">
-            <ListBox.ItemTemplate>
+        <ListBox ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" SelectionChanged="Playlist_SelectionChanged">            
+                <ListBox.ItemTemplate>
                 <DataTemplate>
                 </DataTemplate>
             </ListBox.ItemTemplate>
