--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -7,29 +7,31 @@
         mc:Ignorable="d"
         Title="Sound Wizard" Height="700"  Width="600" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
     <Grid>
-        
         <Grid Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
             <Grid.Background>
                 <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill"/>
             </Grid.Background>
-            <Button Name="OpenButton" Height="70" Width="70" Background="#FFEC73F1" BorderThickness="5" BorderBrush="Black" Click="Open_Button_Click" Margin="63,146,485,382">Open</Button>
-            <Button Name="RewindButton" Width="70" Height="70"  Background="#FFEC73F1" BorderBrush="Black" Margin="168,146,380,382" Click="Rewind_Button_Click">Rewind</Button>
+            <Button FontWeight="DemiBold" Name="OpenButton" Height="70" Width="70" Background="SlateGray" BorderBrush="Black" Click="Open_Button_Click" Margin="63,146,485,382">Open</Button>
+            <Button FontWeight="DemiBold" Name="RewindButton" Width="70" Height="70"  Background="SlateGray" BorderBrush="Black" Margin="168,146,380,382" Click="Rewind_Button_Click">Rewind</Button>
             <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="Stop_Play_ButtonClick">
                 <StackPanel>
                     <Image Source="/PlayerSkin/Button/PlayButton1.png" />
                     <TextBlock>Play / Pause</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Name="ForwardButton" Width="70" Height="70" Background="#FFEC73F1" BorderBrush="Black" Margin="377,146,171,382" Click="Forward_Button_Click">Forward</Button>
-            <Button Name="StopButton" Width="70" Height="70"  Background="#FFEC73F1" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Button_Click">Stop</Button>
+            <Button FontWeight="DemiBold" Name="ForwardButton" Width="70" Height="70" Background="SlateGray" BorderBrush="Black" Margin="377,146,171,382" Click="Forward_Button_Click">Forward</Button>
+            <Button FontWeight="DemiBold" Name="StopButton" Width="70" Height="70" Background="SlateGray" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Button_Click">Stop</Button>
         </Grid>
         <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
-        <ListBox ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" SelectionChanged="Playlist_SelectionChanged">            
-                <ListBox.ItemTemplate>
-                <DataTemplate>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-            <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
+        <ListBox Opacity="0.8" Background="DimGray" BorderBrush="Transparent" ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" SelectionChanged="Playlist_SelectionChanged">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Background" Value="LightGray"/>
+                    <Setter Property="FontWeight" Value="DemiBold"></Setter>
+                    <Setter Property="BorderThickness" Value="2"/>
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
+        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
     </Grid>
 </Window>
