--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -21,7 +21,7 @@
                 </StackPanel>
             </Button>
             <Button Name="ForwardButton" Width="70" Height="70" Background="#FFEC73F1" BorderBrush="Black" Margin="377,146,171,382" Click="Forward_Button_Click">Forward</Button>
-            <Button Name="StopButton" Width="70" Height="70"  Background="#FFEC73F1" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Play_ButtonClick">Stop</Button>
+            <Button Name="StopButton" Width="70" Height="70"  Background="#FFEC73F1" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Button_Click">Stop</Button>
         </Grid>
         <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
         <ListBox ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" SelectionChanged="Playlist_SelectionChanged">            
