--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -11,16 +11,31 @@
             <Grid.Background>
                 <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill"/>
             </Grid.Background>
-            <Button FontWeight="DemiBold" Name="OpenButton" Height="70" Width="70" Background="SlateGray" BorderBrush="Black" Click="Open_Button_Click" Margin="63,146,485,382">Open</Button>
-            <Button FontWeight="DemiBold" Name="RewindButton" Width="70" Height="70"  Background="SlateGray" BorderBrush="Black" Margin="168,146,380,382" Click="Rewind_Button_Click">Rewind</Button>
-            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="Stop_Play_ButtonClick">
+            <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="Open_Button_Click" Margin="63,146,485,382" >
                 <StackPanel>
-                    <Image Source="/PlayerSkin/Button/PlayButton1.png" />
-                    <TextBlock>Play / Pause</TextBlock>
+                    <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button FontWeight="DemiBold" Name="ForwardButton" Width="70" Height="70" Background="SlateGray" BorderBrush="Black" Margin="377,146,171,382" Click="Forward_Button_Click">Forward</Button>
-            <Button FontWeight="DemiBold" Name="StopButton" Width="70" Height="70" Background="SlateGray" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Button_Click">Stop</Button>
+            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="Rewind_Button_Click">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="Stop_Play_ButtonClick">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="Forward_Button_Click">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="Stop_Button_Click">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
+                </StackPanel>
+            </Button>
         </Grid>
         <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
         <ListBox Opacity="0.8" Background="DimGray" BorderBrush="Transparent" ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" SelectionChanged="Playlist_SelectionChanged">
