--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -59,6 +59,7 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Slider Name="AudioSlider" Minimum="0" Maximum="1" Width="400" ValueChanged="Volume_ValueChanged" Margin="0,206,0,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
         <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="mediaElement1" VerticalAlignment="Top" />
     </Grid>
 </Window>
