--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -60,12 +60,15 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Slider Name="AudioSlider" Minimum="0" Maximum="1" Width="400" ValueChanged="Volume_ValueChanged" Margin="0,206,0,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
+        <Slider Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
         <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" />
         <StackPanel>
             <ToggleButton x:Name = "tb" Content = "Toggle"  
          Checked = "HandleCheck" Unchecked = "HandleUnchecked" Margin = "20"
          Width = "108" HorizontalAlignment = "Center" />
         </StackPanel>
+        <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420" >
+            <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
+        </Border>
     </Grid>
 </Window>
