Adding loop media ended command in command pattern

--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -12,27 +12,27 @@
             <Grid.Background>
                 <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
             </Grid.Background>
-            <Button BorderThickness="0" Name="OpenButton"  Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="Click" Margin="63,146,485,382">
+            <Button BorderThickness="0" Name="OpenButton"  Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="CommandProcessing" Margin="63,146,485,382">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="Click">
+            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="Click">
+            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="Click">
+            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="Click">
+            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
                 </StackPanel>
@@ -64,7 +64,7 @@
         <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" />
         <StackPanel>
             <ToggleButton x:Name = "tb" Content = "Toggle"
-         Checked = "HandleCheck" Unchecked = "HandleUnchecked" Margin = "20"
+         Checked = "HandleCheck" Unchecked = "HandleCheck" Margin = "20"
          Width = "108" HorizontalAlignment = "Center" />
         </StackPanel>
         <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420">
