--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -39,7 +39,7 @@
             </Button>
         </Grid>
         <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
-        <ListBox Opacity="0.8" Background="DimGray" BorderBrush="Transparent" ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,262,38,18" AllowDrop="True" SelectionChanged="Playlist_SelectionChanged">
+        <ListBox Opacity="0.8" Background="DimGray" BorderBrush="Transparent" ScrollViewer.VerticalScrollBarVisibility="Visible" Name="Playlist" Margin="36,298,38,18" AllowDrop="True" SelectionChanged="Playlist_SelectionChanged">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Background" Value="LightGray" />
@@ -70,5 +70,6 @@
         <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420">
             <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
         </Border>
+        <Slider IsMoveToPointEnabled="True" Name="seekBar" Thumb.DragStarted="SeekBar_DragStarted" Thumb.DragCompleted="SeekBar_DragCompleted" Margin="36,256,36,378" />
     </Grid>
 </Window>
