--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <TextBlock Name="Duration"
                            Grid.Column="1" Grid.Row="0"
                            HorizontalAlignment="Right"
-                           Text="{Binding Path=Duration}"/>
+                           Text="{Binding Path=DurationFormated}"/>
             </Grid>
         </DataTemplate>
     </Window.Resources>
