--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -78,22 +78,10 @@
                     <Setter Property="BorderThickness" Value="2" />
                 </Style>
             </ListBox.ItemContainerStyle>
-            <!--<ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock>
-                        <TextBlock.Text>
-                            <MultiBinding StringFormat="{}{0} - {1}">
-                                <Binding Path="Title" />
-                                <Binding Path="Duration" />
-                            </MultiBinding>
-                        </TextBlock.Text>
-                    </TextBlock>
-                </DataTemplate>
-            </ListBox.ItemTemplate>-->
         </ListBox>
 
         <Slider Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
-        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" />
+        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Hidden" />
         <StackPanel>
             <ToggleButton x:Name = "tb" Content = "Toggle"
          Checked = "HandleCheck" Unchecked = "HandleCheck" Margin = "20"
