--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -9,21 +9,40 @@
     <!--Refactor the Playlist to use this template or delete the comment!-->
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewModel:SongViewModel}">
-            <Grid>
+            <Grid ShowGridLines="True" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="420" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="220"/>
+                    <ColumnDefinition Width="70" />
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="65" />
                 </Grid.ColumnDefinitions>
                 <TextBlock Name="Title"
                            HorizontalAlignment="Left"
                            Grid.Column="0" Grid.Row="0"
-                           Text="{Binding Path=Title}" />
-                <TextBlock Name="Duration"
+                           Text="{Binding Path=Title}" 
+                           ToolTip="{Binding Path=Title}"/>
+                <TextBlock Name="Album"
+                           HorizontalAlignment="Center"
                            Grid.Column="1" Grid.Row="0"
-                           HorizontalAlignment="Right"
+                           Text="{Binding Path=Album}" 
+                           ToolTip="{Binding Path=Album}"/>
+                <TextBlock Name="Artist"
+                           HorizontalAlignment="Center"
+                           Grid.Column="2" Grid.Row="0"
+                           Text="{Binding Path=Artist}" 
+                           ToolTip="{Binding Path=Artist}"/>
+                <TextBlock Name="Genre"
+                           HorizontalAlignment="Center"
+                           Grid.Column="3" Grid.Row="0"
+                           Text="{Binding Path=Genre}"                     
+                           ToolTip="{Binding Path=Genre}" />
+                <TextBlock Name="Duration"
+                           Grid.Column="4" Grid.Row="0"
+                           HorizontalAlignment="Center"
                            Text="{Binding Path=Duration}" />
             </Grid>
         </DataTemplate>
@@ -33,7 +52,7 @@
             <Grid.Background>
                 <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
             </Grid.Background>
-            <Button BorderThickness="0" Name="OpenButton"  Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="CommandProcessing" Margin="63,146,485,382">
+            <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="CommandProcessing" Margin="63,146,485,382">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
                 </StackPanel>
@@ -63,7 +82,6 @@
 
         <ListBox Name="Playlist"
                  ItemsSource="{Binding}"
-
                  Opacity="0.8"
                  Background="DimGray"
                  BorderBrush="Transparent"
