--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -98,7 +98,7 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
 
-        <Slider Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
+        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
         <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Hidden" />
         <StackPanel>
             <ToggleButton x:Name = "tb" Content = "Toggle"
