--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -13,7 +13,7 @@
                 <Grid.Background>
                     <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
                 </Grid.Background>
-                <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="CommandProcessing" Margin="63,146,485,382">
+                <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Command="{Binding OpenCommand}" Margin="63,146,485,382">
                     <StackPanel>
                         <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
                     </StackPanel>
@@ -42,14 +42,14 @@
             <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
 
             <ListBox Name="Playlist"
-                 ItemsSource="{Binding Path=playlist}"
+                 ItemsSource="{Binding Playlist}"
                  Opacity="0.8"
                  Background="DimGray"
                  BorderBrush="Transparent"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
                  Margin="36,298,38,18"
                  AllowDrop="True"
-                 SelectionChanged="Playlist_SelectionChanged">
+                     SelectionChanged="Playlist_SelectionChanged">      
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid ShowGridLines="True" >
