--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -5,23 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         KeyDown="MainWindowKeys"
-        Title="Sound Wizard" Height="700"  Width="600" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
+        Title="Sound Wizard" Height="700"  Width="1200" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
     <!--Refactor the Playlist to use this template or delete the comment!-->
     <Window.Resources>
-        <VisualBrush x:Key="Media" Stretch="Uniform">
+        <!--<VisualBrush x:Key="Media" Stretch="Uniform">
             <VisualBrush.Visual>
-                <MediaElement Source="ADD SOURCE"/>
+                <MediaElement Source="C:\Users\badbutcher\Desktop\Games\2017.07.26-14.35_01.mp4"/>
             </VisualBrush.Visual>
-        </VisualBrush>
+        </VisualBrush>-->
     </Window.Resources>
     <Grid>
-        <Grid.RowDefinitions>
+        <!--<Grid.RowDefinitions>
             <RowDefinition Height="326*"/>
             <RowDefinition Height="325*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Rectangle Fill="{StaticResource Media}" Grid.RowSpan="2"/>
-        <Button Click="Button_Click" Grid.Row="2" Content="Click me!"/>
+        <Rectangle Fill="{StaticResource Media}" Grid.RowSpan="2"/>-->
+        
         <Grid Margin="-24,-120,-20,0" Height="771" VerticalAlignment="Bottom" Grid.RowSpan="2">
             <Grid.Background>
                 <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
@@ -52,7 +52,7 @@
                 </StackPanel>
             </Button>
         </Grid>
-        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,264">Sound Wizard</TextBox>
+        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,562">Sound Wizard</TextBox>
 
         <ListBox Name="Playlist"
                  ItemsSource="{Binding Playlist}"
@@ -60,7 +60,7 @@
                  Background="DimGray"
                  BorderBrush="Transparent"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
-                 Margin="36,298,38,18"
+                 Margin="36,298,552,18"
                  AllowDrop="True"
                      SelectionChanged="Playlist_SelectionChanged" Grid.RowSpan="2">
             <ListBox.ItemTemplate>
@@ -111,17 +111,18 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,115" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
-        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Visible" />
+        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,441" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
         <StackPanel Grid.RowSpan="2">
             <ToggleButton x:Name = "tb" Content = "Toggle"
          IsChecked="{Binding Path=Repeat}" Margin = "20"
          Width = "108" HorizontalAlignment = "Center" />
         </StackPanel>
-        <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,95">
+        <Border BorderThickness="2" BorderBrush="Black" Margin="767,230,63,419">
             <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
         </Border>
-        <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,256,36,53" ValueChanged="ChangeValue"/>
+        <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,258,552,373" ValueChanged="ChangeValue"/>
+        <Button Click="Button_Click" Content="Click me!" Margin="1136,296,0,0" />
         <Button BorderThickness="0" FontSize="30" Name="ExitButton" Width="70" Height="40" Background="Transparent" BorderBrush="Black" Command="{Binding ExitCommand}" HorizontalAlignment="Left" Margin="514,0,0,224" VerticalAlignment="Bottom">Exit</Button>
+        <MediaElement Height="337" Margin="647,296,63,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Visible" Grid.RowSpan="2" />
     </Grid>
 </Window>
