Fixing file open dialog

--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -61,6 +61,7 @@
         <ListBox Name="Playlist"
                  ItemsSource="{Binding Playlist}"
                  Opacity="0.8"
+                 DragDrop.DragEnter="Playlist_Drop"
                  Background="DimGray"
                  BorderBrush="Transparent"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
